# opae-sdk

libraries/plugins/xfpga/usrclk/: fpga_user_clk.c
python/packager/: pyproject.toml  setup.py
python/pacsign/: pyproject.toml  setup.py
